
The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

### Fixed

- Resolvido o problema do top onde os titulos de mamou e mamado estavam invertidos
- Resolvido o problema das badges de Bot não aparecerem no perfil de bots

## [4.1.1] - 2022-07-18

### Changed

- A forma que a Menhera mostra tempos foi alterada em alguns comandos. São eles: `/bicho`, `/menhera info`,`/estatísticas designer`

### Fixed

- O comando `/top` foi movido para a categoria `info`. Ele estava na `util` faz alguns aninhos, e por isso, funções como ver como usar o comando no website não funcionavam.
- O comando `/menhera info` mostra o uso de memória ram correto.

## [4.1.0] - 2022-07-18

### Added

- O comando `/trisal` foi dividido em 4 subcomandos:

  - `/trisal ver` - Veja o trisal de alguém
  - `/trisal formar` - Forme um trisal com mais 2 amigos
  - `/trisal terminar` - Termine o seu trisal atual
  - `/trisal ordem` - Altere a ordem em que as metadinhas aparecem no comando `/trisal ver`

- Comandos que usam manipulação de imagem agora retornam uma respota rápida falando que a Menhera está pensando.

## [4.0.5] - 2022-07-18

### Fixed

- Resolvido problema de adicionar mais de um item de caças como ativo.
- O comando `/blackjack` voltou a editar a mensagem original ao invés de enviar novas.

## [4.0.4] - 2022-06-25

### Hotfix

- Resolvido problema que perfis não eram exibidos corretamente.

### Added

- Emojis como o de casamento e o de votar na Menhera agora podem ser ocultados com `/personalizar badges`

### Changed

- Novo sistema de geração de imagens! As respostas de imagens estão mais rápidas! Alguns temas de perfil estão um pouquinho diferente, mas é aceitável!

## [4.0.3] - 2022-05-29

### Hotfix

- Os previews de perfil não funcionavam no `/loja comprar tema`

### Changed

- Tempo de resposta dos comandos de ação foram reduzidos